[package]
name = "bybit-shiprekt"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rustelebot = "0.1.2"
serde = { version = "1.0.136", features = ["derive"] }
serde_json = "1.0.78"
#ring = "0.16.20"
url = "2.2.2"
#futures-util = "0.3.21"
tungstenite = { version = "0.17.0", features = ["native-tls"] }
mio = { version = "0.8.0", features = ["os-poll", "net"] }
chrono = "0.4.19"
separator = "0.4.1"
regex = "1.5.4"
