[package]
name = "bybit-shiprekt"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rustelebot = "0.1.2"
serde = { version = "1.0.136", features = ["derive"] }
serde_json = "1.0.78"
url = "2.2.2"
tungstenite = { version = "0.17.0", features = ["native-tls"] }
chrono = "0.4.19"
separator = "0.4.1"
regex = "1.5.4"
tokio-tungstenite = { version = "0.17.1", features = ["native-tls", "stream"] }
tokio = { version = "1.17.0", features = ["full"] }
futures-util = "0.3.21"
